--- a/miniprogram/pages/h2c/h2c.wxss
+++ b/miniprogram/pages/h2c/h2c.wxss
@@ -1,1 +1,27 @@
-/* pages/h2c/h2c.wxss */
+canvas{
+  width: 90%;
+  height: 960rpx;
+  background: #fff;
+  box-shadow: 1px 1px 5px #aaa;
+  margin: 40rpx auto;
+  border-radius: 5rpx;
+}
+
+.button-group{
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  margin: 0;
+}
+
+.tip-msg{
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 400rpx;
+  z-index: 999;
+  left: 0;
+  font-size: 48rpx;
+  color: #ddd;
+  font-weight: 600;
+}
