--- a/miniprogram/pages/h2c/h2c.wxss
+++ b/miniprogram/pages/h2c/h2c.wxss
@@ -2,9 +2,9 @@ canvas{
   width: 90%;
   height: 960rpx;
   background: #fff;
-  box-shadow: 1px 1px 5px #aaa;
+  box-shadow: 0px 1px 10px #ccc;
   margin: 40rpx auto;
-  border-radius: 5rpx;
+  /* border-radius: 0rpx; */
 }
 
 .button-group{
@@ -12,6 +12,9 @@ canvas{
   flex-direction: row;
   padding: 0;
   margin: 0;
+}
+.button-group button{
+  width: 280rpx;
 }
 
 .tip-msg{
